ansible roles for project

--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -57,9 +57,4 @@
         target: /app/schema/backend.sql
         name: all
         state: import
-    
-    - name: " daemon reload "
-      ansible.builtin.systemd_service:
-       daemon_reload: true
-       state: started
-       name: backend
+        notify: " daemon reload "
