--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -3,7 +3,8 @@
     name: 
       - nginx
     state: present
-  notify: starting and enabling
+  notify: 
+    - starting and enabling
 
 - name: removing previous nginx directory
   ansible.builtin.file:
@@ -30,4 +31,5 @@
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
-  notify: restart nginx
+  notify: 
+   - restart nginx
