--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -48,7 +48,8 @@
       ansible.builtin.template:
         src: backend.service.j2
         dest: /etc/systemd/system/backend.service
-      notify: " daemon reload "
+      notify: 
+        - daemon reload
 
     - name: " importing the backend.sql "
       community.mysql.mysql_db:
