--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -23,21 +23,10 @@
       ansible.builtin.user:
         name: expense
 
-    - name: Create a directory if it does not exist
-      ansible.builtin.file:
-        path: /app
-        state: directory
-
-    - name: Download file from a file path
-      ansible.builtin.get_url:
-        url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-        dest: /tmp/backend.zip
-    
-    - name: Unarchive a file that is already on the remote machine
-      ansible.builtin.unarchive:
-       src: /tmp/backend.zip
-       dest: /app
-       remote_src: yes
+    - name: using the ansible common role
+      ansible.builtin.import_role:
+        name: common
+        tasks_from: reusable_file
     
     - name: " downloading dependencies "
       ansible.builtin.command: " npm install "
