ansible roles for project

--- a/roles/common/reusable_file.yml
+++ b/roles/common/reusable_file.yml
@@ -2,7 +2,7 @@
   ansible.builtin.file:
     path: {{ path }}
     state: absent
-  ignore errors: true
+  ignore_errors: true
 
 - name: creating the required folder
   ansible.builtin.file:
