--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -37,8 +37,7 @@
   ansible.builtin.template:
     src: backend.service.j2
     dest: /etc/systemd/system/backend.service
-  notify: 
-    - daemon reload
+  notify: daemon reload
 
 - name: " importing the backend.sql "
   community.mysql.mysql_db:
